[package]
name = "cw-axe"
authors = ["Mikhail Modin <mikhailm1@gmail.com>"]
description = "AWS CloudWatch CLI log viewer"
version = "0.1.0"
homepage = "https://github.com/mikhail-m1/axe"
repository = "https://github.com/mikhail-m1/axe"
license = "GPL-3.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5.4", features = ["derive"] }
chrono = "0.4"
duration-str = "0.8"
humansize = "2.1"
anyhow = "1.0"
toml_edit = "0.22"
regex = "1.10"
shellexpand = { version = "3.1", features = ["path"] } 

aws-sdk-cloudwatchlogs = "1.23"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.5"
