[package]
name = "cw-axe"
authors = ["Mikhail Modin <mikhailm1@gmail.com>"]
description = "AWS CloudWatch CLI log viewer"
version = "0.3.1"
homepage = "https://github.com/mikhail-m1/axe"
repository = "https://github.com/mikhail-m1/axe"
license = "GPL-3.0"
edition = "2021"

[features]
default = ["ui"]
ui = [ "egui", "egui_extras", "eframe" ]

[dependencies]
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5.4", features = ["derive"] }
chrono = "0.4"
duration-str = "0.8"
humansize = "2.1"
anyhow = "1.0"
toml_edit = "0.22"
regex = "1.10"
shellexpand = { version = "3.1", features = ["path"] }
itertools = "0.13"

egui = { version = "0.27", optional = true }
egui_extras = { version = "0.27", optional = true }
eframe = { version = "0.27.0", default-features = false, optional = true, features = [
    "default_fonts",
    "glow",
] }

aws-sdk-cloudwatchlogs = "1.63"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.5"

# live tail
aws-credential-types = "1.2"
bytes = "1.9"
futures-util = "0.3"
futures-core = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
reqwest = { version = "0.12.10", features = ["stream"] }
thiserror = "2.0"


[dev-dependencies]
chrono-tz = "0.10"
